# LangWeave

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  OPTIMIZATION_LOG.md  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt
admin/: index.html  package-lock.json  package.json  vite.config.js
admin/src/: App.vue  api.js
app/: __init__.py  bootstrap.py  config.py  constants.py  exceptions.py  logging.py  types.py  utils.py
app/agents/: __init__.py  _memory.py  assistant.py  emotional.py  fallback_agent.py  general_agent_v2.py  hewa_agent_v2.py  intent.py  intent_agent.py  memory.py  registry_setup.py  research_agent_v2.py
app/api/: __init__.py  deps.py  intent_routes.py  router.py  routes.py  session_routes.py
app/application/: __init__.py  security.py
app/core/: __init__.py  app.py  cache.py  database.py  security.py
app/domain/: __init__.py
app/handlers/: __init__.py
app/helpers/: __init__.py  exceptions.py  formatters.py  logger.py  prompt.py  validators.py
app/interfaces/: __init__.py
app/middleware/: __init__.py  error_handler.py  rate_limit.py  request_logging.py
app/models/: __init__.py  conversation.py  message.py  user.py
app/prompts/: __init__.py  constants.py  prompt_manager.py
app/schemas/: __init__.py  admin.py  auth.py  emotional_chat.py  intent.py  session.py
app/services/: __init__.py  agent_application_service.py  chat_service.py  conversation_persistence.py  conversation_service.py  intent_service.py  session_service.py  tool_service.py
app/tasks/: __init__.py  celery_app.py
config/: README.md  mcp_servers.yaml  prompts.yaml
docs/: LLM使用指南.md
examples/: deepseek_agent.py  fastapi_server.py  multi_agent_supervisor.py  simple_agent.py
fe/src/: App.vue  (+1 more)
langweave/: __init__.py  agent.py  builder.py  config.py  memory.py  registry.py
migrations/: 000_insert_all_agents.sql  001_create_agent_applications_simple.sql  001_insert_research_agent_v2.sql  002_insert_hewa_agent.sql  README.md
scripts/: init_agents.py
tests/: conftest.py  test_app.py  test_auth_chat.py  test_deepseek.py  test_emotional_agent.py  test_framework.py  test_intent.py  test_memory.py  test_openapi.py  test_response.py  test_web.py
(+141 files in other folders)
