[project]
name = "langweave"
version = "0.1.0"
description = "LangWeave (织语): LangChain agents framework with FastAPI"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
dependencies = [
    "langchain>=1.3",
    "langchain-core>=1.4",
    "langgraph>=1.2",
    "pydantic>=2.0",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
deepseek = ["langchain-deepseek>=0.1"]
web = ["fastapi>=0.115", "fastapi-swagger2>=0.3", "uvicorn[standard]>=0.32"]
dev = ["pytest>=8.0", "httpx>=0.27"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["langweave"]

[tool.pytest.ini_options]
testpaths = ["tests"]
